# Brazilian_E-Commerce_kaggle

./: .gitignore  pyproject.toml
1_datasets/0_original_datasets/datasets_diagram/: .$datasets_diagram.drawio.bkp  datasets_diagram.drawio  datasets_diagram.numbers
1_datasets/1_make_dataset/: make_data.ipynb
1_datasets/1_make_dataset/sub/0_preprocessing/0_olist_orders_dataset/: preprocessing_orders_dataset.ipynb
1_datasets/1_make_dataset/sub/0_preprocessing/1_olist_order_reviews_dataset/: preprocessing_review_dataset.ipynb
1_datasets/1_make_dataset/sub/0_preprocessing/2_olist_order_payments_dataset/: preprocessing_payments_dataset.ipynb
1_datasets/1_make_dataset/sub/0_preprocessing/3_olist_order_item_dataset/: preprocessing_items_dataset.ipynb
1_datasets/1_make_dataset/sub/0_preprocessing/4_olist_customer_dataset/: olist_customer_dataset.ipynb
1_datasets/1_make_dataset/sub/1_merge/: data_merge.ipynb
1_datasets/1_make_dataset/sub/2_feature_enginieering/: feature_enginnering.ipynb
1_datasets/999_others/check_contents_of_datasets/: datasets.ipynb
1_datasets/999_others/transrate_japanese/: transrate_japanese.ipynb
2_EDA/: EDA.ipynb
3_models/: final_model.ipynb
3_models/モデル検討/: 1_model_lightgbm.ipynb  2_model_rf.ipynb  3_model_ens.ipynb  3_model_ensanbleの検証.ipynb  4_model_ens_lgbm-class_rf-class.ipynb  4_model_ens_lgbm-class_rf-reg.ipynb  4_model_ens_lgbm-reg_lgbm-class.ipynb  4_model_ens_lgbm-reg_rf-class.ipynb  4_model_ens_lgbm-reg_rf-reg.ipynb  4_model_ens_rf-reg_rf-class.ipynb
my_package/: excute_notebook.py
