[project]
name = "brazilian-e-commerce-kaggle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki-etu", email = "yuki.abcba369@gmail.com" }
]
dependencies = [
    "numpy==1.25.2",
    "pandas==2.1.4",
    "matplotlib==3.8.0",
    "ipykernel>=6.29.4",
    "nbformat==5.2.0",
    "nbconvert==6.5.4",
    "jupyter>=1.0.0",
    "scikit-learn==1.2.2",
    "tqdm>=4.66.2",
    "googletrans>=3.0.0",
    "japanize-matplotlib>=1.1.3",
    "seaborn==0.13.1",
    "setuptools>=69.2.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/brazilian_e_commerce_kaggle"]
